--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -16,7 +16,7 @@
         <br>
         <br>
             <b> Team </b> <br>
-            <i> <a href="https://www.linkedin.com/in/jotaguy"  style="color:orange">Gia Hưng </a> <br>
+            <i> <a href="https://www.linkedin.com/in/longhg0220/"  style="color:orange"> Hoàng Long </a> <br>
         </i>
         </left>
 <!-- Place this tag in your head or just before your close body tag. -->
